--- a/RNGestureControl/package.json
+++ b/RNGestureControl/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-swipe-gestures": "^1.0.5"
   },
   "devDependencies": {
